ユーザー機能完了

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,8 @@
       </nav>
     </header>
 
+    <%= render 'shared/search_form' %><!-- 検索フォームのパーシャル -->
+
     <%= yield %>
   </body>
 </html>
