--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,16 @@
         </div>
       </nav>
     </header>
+    
+    #エラーメッセージ
+    <% if notice %>
+      <p class="notice"><%= notice %></p>
+    <% end %>
+
+    <% if alert %>
+      <p class="alert"><%= alert %></p>
+    <% end %>
+
 
     <%= render 'shared/search_form' %><!-- 検索フォームのパーシャル -->
 
