Move: ヘッダー下バナーの実装をトップページブランチへ移動

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,1 +1,11 @@
-<h1>Room pick</h1>
+<header>
+  <%= render 'shared/header' %>
+</header>
+
+<!-- ヘッダー下のバナー -->
+<div class="top-banner"></div>
+
+<main>
+  <!-- ここからトップページのコンテンツ -->
+  <h1>Room pick</h1>
+</main>
