--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,7 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+.top-banner {
+  background-image: image-url("top_banner.jpg"); /* 画像読み込み */
+  background-size: cover;       /* 画像を領域いっぱいに表示（比率維持） */
+  background-position: center;  /* 中央寄せ */
+  width: 100%;                   /* 横幅いっぱい */
+  height: 300px;                 /* 高さ固定（好みに応じて調整） */
+}
