--- a/app/views/public/shared/_header.html.erb
+++ b/app/views/public/shared/_header.html.erb
@@ -22,6 +22,7 @@
 
         <% if user_signed_in? %>
           <li class="nav-item"><%= link_to "マイページ", mypage_path, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "新規投稿", new_post_path, class: "nav-link" %></li>
           <li class="nav-item"><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link" %></li>
         <% else %>
           <li class="nav-item"><%= link_to "ログイン", new_user_session_path, class: "nav-link" %></li>
