--- a/app/views/public/shared/_header.html.erb
+++ b/app/views/public/shared/_header.html.erb
@@ -1,30 +1,45 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
   <div class="container-fluid">
+
     <!-- 左：ロゴ -->
-    <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag "roompick-logo.png", alt: "RoomPick ロゴ", class: "logo-img" %>
+    <%= link_to root_path, class: "navbar-brand d-flex align-items-center" do %>
+      <%= image_tag "roompick-logo.png", alt: "RoomPick", class: "logo-img" %>
     <% end %>
 
-    <!-- ハンバーガーメニュー（スマホ用） -->
+    <!-- トグラー（スマホ） -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <!-- 右側ナビ -->
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav align-items-center">
-        
-        <!-- ★ 検索フォーム（右ナビの先頭＝一番左） -->
-        <li class="nav-item me-3">
-          <%= render 'shared/search_form' %>
-        </li>
+    <!-- 折りたたみ本体 -->
+    <div class="collapse navbar-collapse" id="navbarNav">
 
+      <!-- 中央：検索フォーム（横幅はCSSで調整） -->
+      <div class="navbar-search mx-lg-auto my-2 my-lg-0">
+        <%= form_with url: search_posts_path, method: :get, local: true, class: "d-flex" do |f| %>
+          <%= f.text_field :q, value: params[:q] || params[:keyword],
+                class: "form-control form-control-sm me-2",
+                placeholder: "キーワード検索" %>
+          <%= f.submit "検索", class: "btn btn-outline-success btn-sm" %>
+        <% end %>
+      </div>
+
+      <!-- 右：メニュー -->
+      <ul class="navbar-nav ms-lg-3 align-items-lg-center">
         <% if user_signed_in? %>
-          <li class="nav-item"><%= link_to "マイページ", mypage_path, class: "nav-link" %></li>
+          <!-- ログイン時：投稿一覧／ユーザー一覧／新規投稿／マイページ／ログアウト -->
+          <li class="nav-item"><%= link_to "投稿一覧", posts_path, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "ユーザー一覧", users_path, class: "nav-link" %></li>
           <li class="nav-item"><%= link_to "新規投稿", new_post_path, class: "nav-link" %></li>
-          <li class="nav-item"><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "マイページ", mypage_path, class: "nav-link" %></li>
+          <li class="nav-item">
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link" %>
+          </li>
         <% else %>
+          <!-- 未ログイン時：投稿一覧／ユーザー一覧／ログイン／新規登録 -->
+          <li class="nav-item"><%= link_to "投稿一覧", posts_path, class: "nav-link" %></li>
+          <li class="nav-item"><%= link_to "ユーザー一覧", users_path, class: "nav-link" %></li>
           <li class="nav-item"><%= link_to "ログイン", new_user_session_path, class: "nav-link" %></li>
           <li class="nav-item"><%= link_to "新規登録", new_user_registration_path, class: "nav-link" %></li>
         <% end %>
