--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -1,5 +1,11 @@
-<%= form_with url: search_posts_path, method: :get, local: true do |f| %>
-  <%= f.label :keyword, "キーワード検索" %>
-  <%= f.text_field :keyword, placeholder: "キーワードを入力" %>
-  <%= f.submit "検索" %>
+<%= form_with url: search_posts_path, method: :get, local: true, html: { class: "navbar-search" } do %>
+  <div class="search-pill">
+    <i class="fas fa-search search-icon" aria-hidden="true"></i>
+    <%= text_field_tag :keyword, params[:keyword] || params[:q],
+                       placeholder: "検索する",
+                       class: "search-input",
+                       autocomplete: "off" %>
+    <!-- 入力がある時だけ見せる検索ボタン -->
+    <button type="submit" class="search-button">検索</button>
+  </div>
 <% end %>
