--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -15,6 +15,12 @@
 
         <div class="card-body">
           <h1 class="h3 mb-2"><%= @post.title %></h1>
+          <% if @post.user.present? %>
+            <div class="mb-2">
+              投稿者：
+              <%= link_to(@post.user.name.presence || @post.user.email, user_path(@post.user), class: "link-primary") %>
+            </div>
+          <% end %>
 
           <%# 評価（表示用） %>
           <% if @post.respond_to?(:rating) && @post.rating.present? %>
